Claudia's page update

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <th>Claudia</td>
-            <th>In progress...</td>
+            <th><a href="Claudia/claudia.html">Claudia's page</td>
             <th>claudia.noesel@googlemail.com</form>
                 </td>
         </tr>
